--- a/src/components/ProfileDropdown/ProfileDropdown.scss
+++ b/src/components/ProfileDropdown/ProfileDropdown.scss
@@ -12,10 +12,10 @@
   }
 
   &__avatar {
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 2rem;
+    height: 2rem;
     margin-right: 0.25rem;
-    border-radius: 0.25rem;
+    border-radius: 50%;
     background-color: $yellow;
   }
   &__arrow {
