--- a/src/components/MovieDetails/MovieDetails.scss
+++ b/src/components/MovieDetails/MovieDetails.scss
@@ -14,7 +14,7 @@
     min-height: 80vh;
   }
   @include xl {
-    background-position: 25rem top;
+    // background-position: 25rem top;
   }
   &:before {
     content: '';
@@ -25,7 +25,7 @@
     height: 100%;
     background: rgba(0, 0, 0, 0.75);
     @include xl {
-      width: 60%;
+      width: 40%;
       background: linear-gradient(90deg, $black 50%, transparent);
     }
   }
@@ -49,6 +49,8 @@
   }
 
   &__wrapper {
+    position: absolute;
+    bottom: 80px;
     width: 100%;
     padding: 1rem;
     @include sm {
@@ -87,7 +89,7 @@
 
   &__description {
     font-size: 1rem;
-    color: $gray500;
+    color: white;
     @include sm {
       font-size: 1.2rem;
     }
@@ -101,12 +103,7 @@
     align-items: center;
     padding: 0.5rem 1.5rem 0.5rem 1rem !important;
     font-weight: bold;
-    text-transform: uppercase;
-    border: 1px solid $white;
-    &:hover {
-      color: $black;
-      background-color: $white;
-    }
+
     &-icon {
       margin-right: 0.25rem;
       padding: 2px;
