--- a/src/components/MovieSliderItem/MovieSliderItem.scss
+++ b/src/components/MovieSliderItem/MovieSliderItem.scss
@@ -5,12 +5,13 @@ $slideBorderWidth: '3px';
 $slideScale: '1.2';
 
 .MovieSliderItem {
+  cursor: pointer;
   margin: 0 0.25rem;
   height: 10.5rem;
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
-  border: #{$slideBorderWidth} solid transparent;
+  border-radius: 4px;
 
   &:after {
     content: none;
@@ -53,15 +54,24 @@ $slideScale: '1.2';
   }
 
   &__title {
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.45rem;
   }
 
   &__btn {
-    position: absolute;
-    top: 0.5rem;
-    right: 1rem;
-    font-size: 1.25rem;
-    color: $white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+
+    font-weight: bold;
+
+    &-icon {
+      padding: 2px;
+      width: 20px;
+      height: 20px;
+    }
   }
 }
 
