feature: main ui

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,5 +1,6 @@
 // libraries
 @import 'vue3-toastify/dist/index.css';
+@import 'video.js/dist/video-js.css';
 
 //helpers
 @import '../styles/helpers/breakpoints.scss';
