--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -6,6 +6,7 @@
   grid-template-columns: repeat(1, 1fr);
   grid-gap: 1rem;
   margin-bottom: 1rem;
+  padding: 0 2rem;
 
   @include sm {
     grid-template-columns: repeat(2, 1fr);
